--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,9 +4,10 @@ NODE_ENV=development
 
 # Database Configuration
 MONGODB_URI=mongodb://localhost:27017/roadmap-generator
+# For MongoDB Atlas: mongodb+srv://username:password@cluster.mongodb.net/database
 
 # JWT Configuration
-JWT_SECRET=your-super-secret-jwt-key-here
+JWT_SECRET=your-super-secret-jwt-key-here-change-this-in-production
 JWT_EXPIRE=7d
 
 # CORS Configuration
